--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/feedback-app
-JWT_SECRET=supersecretkey
+MONGO_URI=mongodb+srv://Yashas_S:Yashas@2468@yashas.wcfxkys.mongodb.net/?retryWrites=true&w=majority&appName=Yashas
+JWT_SECRET=Yashas@2468
 JWT_EXPIRES_IN=7d
