--- a/package.json
+++ b/package.json
@@ -1,11 +1,27 @@
 {
-  "name": "feedback-app",
-  "private": true,
+  "name": "student-feedback-backend",
+  "version": "1.0.0",
   "scripts": {
-    "start": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\""
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "engines": {
+    "node": "18.x"
+  },
+  "dependencies": {
+    "bcrypt": "^6.0.0",
+    "body-parser": "^2.2.0",
+    "cloudinary": "^2.7.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
+    "express": "^5.1.0",
+    "joi": "^18.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.18.1",
+    "multer": "^2.0.2",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
-    "concurrently": "^8.2.0"
+    "nodemon": "^3.1.10"
   }
 }
-
